--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2335,7 +2335,7 @@
             top: 50%;
             transform: translateY(-50%);
             width: 50px;
-            height: 80px;
+            height: 100%;
             background: rgba(0, 0, 0, 0.8);
             border: none;
             border-radius: 0;
